[project]
name = "impulsodtf-img-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4==4.13.4",
    "lxml==6.0.0",
    "openpyxl==3.1.5",
    "pillow>=11.3.0",
    "python-telegram-bot>=22.4",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "urllib3==2.5.0",
]
